src/test/contracts/negative/bad_contract3.mligo
type storage = int

type parameter = nat

type return = operation list * string

[@entry]
let main (action : parameter) (store : storage) : return =
  (([] : operation list), "bad")
